fix:  fix overflowing div

--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -6,7 +6,7 @@
   border-radius: 8px;
   justify-content: center;
   align-items: center;
-  box-shadow: 4px 4px 12px rgb(0 0 0 / 0.2);
+  box-shadow: 2px 2px 4px rgb(0 0 0 / 0.1);
   background-position: center;
   background-size: cover;
   color: white;
@@ -14,14 +14,16 @@
 }
 
 .category-card p {
-  box-shadow: 4px 4px 12px rgb(0 0 0 / 0.2);
+  box-shadow: 2px 2px 4px rgb(0 0 0 / 0.1);
 }
 
 .product-card {
   display: flex;
-  box-shadow: 2px 2px 6px rgb(0 0 0 / 0.2);
-  width: 400px;
+  box-shadow: 2px 2px 4px rgb(0 0 0 / 0.1);
+  width: 800px;
   gap: 20px;
+  margin: 0 0 24px 0;
+
 }
 
 .product-card img {
@@ -47,13 +49,15 @@
 }
 
 .card-trip {
-  width: 600px;
-  box-shadow: 2px 2px 6px rgb(0 0 0 / 0.2);
+  box-shadow: 2px 2px 4px rgb(0 0 0 / 0.1);
   margin: 20px 0;
 }
 
 .card-trip img {
   width: 100%;
+  height: 160px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .card-trip-info {
